--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@enbock/string-helper-ts",
   "description": "An atomic helper implementation for strings.",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "homepage": "https://github.com/enbock/StringHelper-TypeScript",
   "license": "MIT",
   "author": "Endre Bock <npm.dev@itbock.de>",
@@ -12,8 +12,7 @@
     "build": "npx tsc --build tsconfig.json -v",
     "test": "jest"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.10.3",
     "@babel/preset-env": "^7.10.3",
